--- a/src/components/ShareModal.scss
+++ b/src/components/ShareModal.scss
@@ -19,6 +19,7 @@
       line-height: normal;
     }
     .share-modal__link__btn {
+      width: 44px;
       border-radius: 4px;
       background: #cf0;
       display: flex;
