--- a/src/styles/Album.scss
+++ b/src/styles/Album.scss
@@ -22,9 +22,27 @@
     transition: 0.6s;
     overflow: hidden;
     &.active {
+      &.playing {
+        .main__header__album-cover__img {
+          animation-play-state: running; // 애니메이션을 실행 상태로 변경
+        }
+      }
+      &.no-playing {
+        .main__header__album-cover__img {
+          animation-play-state: paused !important;
+        }
+        .main__header__album-cover {
+          &::after {
+            animation-play-state: paused !important;
+          }
+        }
+      }
       .main__header__album-cover__img {
         box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
         background-size: cover;
+        animation: none;
+
+        animation-play-state: running;
         animation: rotate-disc 3s 0.6s linear infinite;
         @keyframes rotate-disc {
           from {
@@ -38,6 +56,7 @@
       .main__header__album-cover {
         &::after {
           animation: rotate-disc2 3s 0.6s linear infinite;
+          animation-play-state: running;
           @keyframes rotate-disc2 {
             from {
               transform: translate(-50%, -50%) rotate(0deg);
