영진 수정 - 메인 scss 수정된거 push

--- a/src/styles/Album.scss
+++ b/src/styles/Album.scss
@@ -643,7 +643,7 @@
 } //.album--END--
 
 @media screen and (max-width: 980px) {
-  .album {
+  .main {
     padding-top: 166px;
     .main__header {
       width: calc(100% - 32px);
@@ -676,8 +676,9 @@
 }
 
 @media screen and (max-width: 768px) {
-  .album {
-    padding-top: 196px;
+  .main {
+    padding-top: 226px;
+
     .album__content-list{
       .album__content-list__tab{
         padding-bottom: 16px;
@@ -689,13 +690,17 @@
     .rhap_main-controls {
       margin-top: -16px;
       button {
-        height: 60px;
+        height: 30px;
       }
     }
     .main__header {
       padding: 16px;
       gap: 0;
       height: auto;
+      .rhap_stacked .rhap_controls-section{
+        margin-top: 32px;
+        margin-bottom: 16px;
+      }
       .main__header__mobile-detail-btn {
         // display: block !important;
         position: absolute;
@@ -742,7 +747,7 @@
 }
 
 @media screen and (max-width: 600px) {
-  .album {
+  .main {
     .album__content-list {
       .album__content-list__list {
         grid-template-columns: repeat(1, 1fr);
