--- a/src/styles/ChatBot.scss
+++ b/src/styles/ChatBot.scss
@@ -50,7 +50,7 @@ $shadow-color: rgba(0, 0, 0, 0.3);
       overflow-y: auto;
       max-height: 500px;
       .message {
-        max-width: 70%;
+        max-width: 100%;
         padding: 12px;
         border-radius: 10px;
         font-size: 14px;
@@ -93,7 +93,7 @@ $shadow-color: rgba(0, 0, 0, 0.3);
           padding: 0px;
           .message__content{
             display: flex;
-            width: 100%;
+            width: 90%;
             align-items: center;
             gap: 8px;
             img{
@@ -137,7 +137,7 @@ $shadow-color: rgba(0, 0, 0, 0.3);
 
       button {
         width: 100px;
-        height: 24px;
+        height: 30px;
         background: #cf0;
         position: relative;
         top: 0;
@@ -159,7 +159,7 @@ $shadow-color: rgba(0, 0, 0, 0.3);
           width: calc(100% - 2px);
           transition: 0.2s;
           border-radius: 8px;
-          height: 23px;
+          height: 29px;
           border: 1px solid #cf0;
         }
         &:hover {
@@ -186,15 +186,48 @@ $shadow-color: rgba(0, 0, 0, 0.3);
     border-radius: 12px;
     border: 1px solid #222;
     margin-top: 16px;
+    transition: 0.3s;
+    height: 60px;
+    &.active {
+      height: auto;
+      .music__information__header {
+        &::before {
+          border: 1px solid #fff;
+          background: url("../assets/images/arrow_drop_down2.svg") center
+          no-repeat;
+          transform: translate(0, -50%) rotate(180deg);
+        }
+      }
+
+    }
     &__header {
       text-align: left;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      margin-bottom: 16px;
+      position: relative;
       h2 {
         color: var(--primary-base, #CF0);
         font-family: Orbitron400;
         font-size: 18px;
         font-style: normal;
         line-height: normal;
-        margin-bottom: 16px;
+      }
+
+      &::before {
+        content: "";
+        width: 24px;
+        height: 24px;
+        border: 1px solid #cf0;
+        position: absolute;
+        top: 50%;
+        right: 16px;
+        transform: translate(0, -50%);
+        transition: 0.3s;
+        background: url("../assets/images/arrow_drop_down.svg") center no-repeat;
+        background-size: contain;
       }
     }
 
@@ -283,11 +316,31 @@ $shadow-color: rgba(0, 0, 0, 0.3);
         &:hover {
           background-color: rgba(255, 255, 255, 0.1);
         }
+        &::before {
+          border: 1px solid transparent;
+          // background-color: rgba(255, 255, 255, 0.1);
+        }
       }
     }
   }
 }
 
+.music__information__instrument,
+.music__information__gender,
+.music__information__tempo,
+.music__information__detail{
+  input{
+    width: 100%;
+    padding: 0;
+    border: none;
+    border-radius: 8px;
+    font-size: 14px;
+    background: transparent;
+    color: $text-color;
+    outline: none;
+    margin-bottom: 32px;
+  }
+}
 
 
 .music__information__tags,.music__information__story{
