--- a/src/components/unit/Chart.scss
+++ b/src/components/unit/Chart.scss
@@ -52,3 +52,14 @@
         }
     }
 }
+@media screen and (max-width: 768px) {
+    .chart__pie {
+        .chart__pie--legends {
+            flex-direction: row;
+            gap: 16px;
+            top: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+    }
+}
