--- a/src/styles/AlbumDetail.scss
+++ b/src/styles/AlbumDetail.scss
@@ -226,6 +226,7 @@
               }
             }
             dt {
+              text-align: center;
               min-height: 34px;
               height: 100%;
               min-width: 160px;
