영진 수정 - hit music list 수정

--- a/src/styles/Album.scss
+++ b/src/styles/Album.scss
@@ -157,7 +157,7 @@
       } //swiper-pagination-bullet--END--
       .swiper-slide {
         // width: 170px !important;
-
+        height: 200px;
         .swiper-music-list__item__left {
           width: 100%;
           height: 160px;
