영진 수정 - 앨범 커버 유저 이미지 png로 변경

--- a/src/components/unit/AlbumItem.scss
+++ b/src/components/unit/AlbumItem.scss
@@ -47,6 +47,7 @@
         transform: translate(-50%, -50%);
         width: 42px;
         height: 42px;
+        margin-top: -14px;
       }
       .album__content-list__list__item__left__img {
         width: 100%;
