--- a/src/styles/MyPage.scss
+++ b/src/styles/MyPage.scss
@@ -191,6 +191,61 @@
                     }
                 }
             }
+
+            .tw-connect-wallet,
+            .mypage__follow-btn {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 100%;
+                border-radius: 12px;
+                color: #1a1a1a;
+                font-family: Orbitron600;
+                font-size: 16px;
+                letter-spacing: 0.48px;
+                height: 50px;
+                text-align: center;
+                position: relative;
+                cursor: pointer;
+                transition: 0.3s all;
+                background-color: #cf0;
+
+                &::after {
+                    content: '';
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    left: 0;
+                    top: 0;
+                    transform: translateY(3px);
+                    border-radius: 12px;
+                    border-bottom: 1px solid;
+                    transition: 0.3s all;
+                    border-color: #cf0;
+                }
+
+                &:hover {
+                    transform: translateY(3px);
+                    &::after {
+                        transform: translateY(-1px);
+                    }
+                }
+
+                &.follow {
+                    color: #1a1a1a;
+                    background-color: #cf0;
+                    &::after {
+                        border-color: #cf0;
+                    }
+                }
+                &.unfollow {
+                    color: #bc0036;
+                    background-color: #383838;
+                    &::after {
+                        border-color: #383838;
+                    }
+                }
+            }
         }
     }
     .mypage__nav {
