--- a/src/components/UnFollowModal.scss
+++ b/src/components/UnFollowModal.scss
@@ -1,2 +1,57 @@
 .unfollow-modal {
+    // 사실상 버튼 랩입니다.
+    width: 100%;
+    display: flex;
+    gap: 24px;
+    justify-content: space-between;
+
+    .unfollow-modal__button {
+        border-radius: 12px;
+        border: 1px solid;
+        width: 100%;
+        text-align: center;
+        padding: 12px;
+        font-family: Orbitron600;
+        font-size: 16px;
+        letter-spacing: 0.48px;
+        position: relative;
+        border: none;
+        transition: 0.3s all;
+
+        &::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            top: 0;
+            transform: translateY(3px);
+            border-radius: 12px;
+            border-bottom: 1px solid;
+            transition: 0.3s all;
+        }
+
+        &:hover {
+            transform: translateY(3px);
+
+            &::after {
+                transform: translateY(0px);
+            }
+        }
+
+        &.no {
+            color: #f1f1f1;
+            background: #383838;
+            &::after {
+                border-color: #383838;
+            }
+        }
+        &.yes {
+            color: #1a1a1a;
+            background-color: #cf0;
+            &::after {
+                border-color: #cf0;
+            }
+        }
+    }
 }
