--- a/src/components/unit/Filter.scss
+++ b/src/components/unit/Filter.scss
@@ -95,6 +95,8 @@
             font-size: 14px;
             display: flex;
             gap: 10px;
+            transition: 0.3s all;
+            &:hover,
             &.select {
                 background-color: #cf0;
                 color: #222;
