--- a/src/components/unit/AlbumsTable.scss
+++ b/src/components/unit/AlbumsTable.scss
@@ -1,3 +1,9 @@
+
+.audio-container{
+    position: fixed;
+    top: -100%;
+    left: -100%;
+}
 .albums-table {
     width: 100%;
     border-radius: 12px;
@@ -24,6 +30,7 @@
             gap: 16px;
             align-items: center;
             align-self: stretch;
+
             th {
                 color: var(--primary-200, #a9d400);
                 text-align: center;
@@ -35,6 +42,13 @@
                 &:last-child {
                     padding-right: 0;
                 }
+                &.albums-table__type,
+                &.albums-table__song{
+                    width: 54px;
+                }
+                &.albums-table__song-title{
+                    width: 440px;
+                }
             }
         }
     }
@@ -45,6 +59,32 @@
             gap: 16px;
             align-items: center;
             align-self: stretch;
+            transition: 0.3s;
+            cursor: pointer;
+            &:hover {
+                background: var(--Color-04, #383838);
+                td{
+                    .albums-table__song-btn{
+                        border: 1px solid #a9d400;
+                        &::after{
+                            opacity: 1;
+                        }
+                    }
+                }
+            }
+            &.active{
+                td{
+                    .albums-table__song-btn{
+                        border: 1px solid #a9d400;
+                        &::after{
+                            opacity: 0;
+                        }
+                        .loading-wave{
+                            opacity: 1;
+                        }
+                    }
+                }
+            }
             td {
                 color: var(--Text-music-sub, #aaa);
                 text-align: center;
@@ -55,6 +95,104 @@
                 &:first-child {
                     width: 40px;
                 }
+                img{
+                    margin:  auto;
+                    &.albums-table__artist-img{
+                        width: 24px;
+                        height: 24px;
+                        border-radius: 100%;
+                        object-fit: cover;
+                    }
+                }
+                .albums-table__artist{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 16px;
+                    img{
+                        margin: 0;
+                    }
+                }
+                .albums-table__song-btn{
+                    width: 30px;
+                    height: 30px;
+                    border-radius: 2px;
+                    border: 1px solid transparent;
+                    transition: 0.3s;
+                    position: relative;
+                    img{
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                    &::before{
+                        
+                    }
+                    &::after{
+                        content: '';
+                        position: absolute;
+                        left: 50%;
+                        top: 50%;
+                        transform: translate(-50%,-50%);
+                        width: 12px;
+                        height: 12px;
+                        background: url('../../assets/images/table-play-icon.svg') center no-repeat;
+                        background-size: cover;
+                        transition: 0.3s;
+                        opacity: 0;
+                    }
+                    /* From Uiverse.io by mrpumps31232 */ 
+                    .loading-wave {
+                        width: 50px;
+                        height: 20px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: flex-end;
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%,-50%);
+                        z-index: 1;
+                        transition: 0.3s;
+                        opacity: 0;
+                    }
+                    
+                    .loading-bar {
+                        width: 2px;
+                        height: 6px;
+                        margin: 0 1px;
+                        background-color: #fff;
+                        border-radius: 5px;
+                        animation: loading-wave-animation 1s ease-in-out infinite;
+                    }
+                    
+                    .loading-bar:nth-child(2) {
+                        animation-delay: 0.1s;
+                    }
+                    
+                    .loading-bar:nth-child(3) {
+                        animation-delay: 0.2s;
+                    }
+                    
+                    .loading-bar:nth-child(4) {
+                        animation-delay: 0.3s;
+                    }
+                    
+                    @keyframes loading-wave-animation {
+                        0% {
+                        height: 5px;
+                        }
+                    
+                        50% {
+                        height: 18px;
+                        }
+                    
+                        100% {
+                        height: 5px;
+                        }
+                    }
+                    
+                }//albums-table__song-btn--END--
                 .td-content {
                     display: flex;
                     justify-content: center;
@@ -77,9 +215,7 @@
                     }
                 }
             }
-            &:hover {
-                background: var(--Color-04, #383838);
-            }
+
         }
     }
 }
