상훈 feat : 앨범 컴포넌트에 더미 데이터 추가 및 앨범 리스트 렌더링 기능 구현. 스타일 수정으로 앨범 리스트를 그리드 형태로 표시하도록 변경.

--- a/src/components/mypage/Albums.scss
+++ b/src/components/mypage/Albums.scss
@@ -1,5 +1,11 @@
 .albums {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.albums-list {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
 }
