--- a/src/components/create/SubBanner.scss
+++ b/src/components/create/SubBanner.scss
@@ -52,5 +52,26 @@
         padding: 8px 10px;
         width: fit-content;
         z-index: 3;
+        position: relative;
+        transition: 0.3s all;
+        &:hover {
+            transform: translateY(3px);
+            &::after {
+                transform: translateY(0px);
+            }
+        }
+
+        &::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            transform: translateY(3px);
+            transition: 0.3s all;
+            border-radius: 12px;
+            border-bottom: 1px solid #00ffb3;
+        }
     }
 }
