--- a/src/components/CreateCompleteModal.scss
+++ b/src/components/CreateCompleteModal.scss
@@ -28,8 +28,30 @@
         color: #1a1a1a;
         font-family: orbitron600;
         border-radius: 12px;
+        position: relative;
+        transition: 0.3s all;
+
+        &:hover {
+            transform: translateY(3px);
+            &::after {
+                transform: translateY(0px);
+            }
+        }
+
+        &::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            transform: translateY(3px);
+            transition: 0.3s all;
+            border-bottom: 1px solid #cf0;
+            border-radius: 12px;
+        }
     }
-    a{
+    a {
         display: flex;
         align-items: center;
         justify-content: center;
