상훈 feat : Albums 컴포넌트에 앨범이 없을 경우 표시할 NoneContent 추가 및 AlbumsCreateModal에서 이미지 업로드 시 오류 메시지 처리 로직 개선. 앨범 이름 입력 시 유효성 검사 및 오류 메시지 표시 기능 추가.

--- a/src/components/mypage/albums/AlbumsCreateModal.scss
+++ b/src/components/mypage/albums/AlbumsCreateModal.scss
@@ -70,6 +70,16 @@
     margin-bottom: 12px;
   }
 
+  &__error-message {
+    text-align: center;
+    color: #ff5c63;
+    font-family: Inter600;
+    font-size: 12px;
+    font-style: normal;
+    line-height: normal;
+    margin-bottom: 12px;
+  }
+
   &__name-box {
     position: relative;
     margin-top: 12px;
