--- a/src/components/UnFollowModal.scss
+++ b/src/components/UnFollowModal.scss
@@ -1,9 +1,23 @@
 .unfollow-modal {
-    // 사실상 버튼 랩입니다.
-    width: 100%;
     display: flex;
+    flex-direction: column;
     gap: 24px;
-    justify-content: space-between;
+
+    .unfollow-modal__message {
+        width: 100%;
+        color: #aaa;
+        text-align: center;
+        font-family: Orbitron400;
+        font-size: 16px;
+        font-style: normal;
+    }
+
+    .unfollow-modal__button-wrap {
+        width: 100%;
+        display: flex;
+        gap: 24px;
+        justify-content: space-between;
+    }
 
     .unfollow-modal__button {
         border-radius: 12px;
