--- a/src/styles/MyPage.scss
+++ b/src/styles/MyPage.scss
@@ -15,6 +15,7 @@
             background-color: #333;
             border-radius: 50px;
             img {
+                object-fit: cover;
                 width: 100%;
             }
         }
@@ -62,6 +63,7 @@
                     width: 100px;
                     height: 100px;
                     img {
+                        object-fit: cover;
                         border-radius: 50%;
                         width: 100px;
                         height: 100px;
@@ -112,6 +114,7 @@
                 line-height: normal;
                 letter-spacing: 0.48px;
                 margin-bottom: 8px;
+                flex: 1;
             }
             .mypage__social-icons {
                 width: 100%;
