--- a/src/components/mypage/albums/AlbumsItem.scss
+++ b/src/components/mypage/albums/AlbumsItem.scss
@@ -8,6 +8,7 @@
   background: var(--Color-03, #222);
   width: 212px;
   height: 272px;
+  cursor: pointer;
   &__info {
     display: flex;
     flex-direction: column;
