영진 수정 - 플레이 수정 추가

--- a/src/styles/Album.scss
+++ b/src/styles/Album.scss
@@ -300,6 +300,7 @@
             display: flex;
             align-items: center;
             gap: 12px;
+            margin: 8px 0;
             img {
               width: 16px;
               height: 16px;
