경세 송 리스트 필터 수정

--- a/src/components/unit/UserTable.scss
+++ b/src/components/unit/UserTable.scss
@@ -64,6 +64,7 @@
             &.following {
                 background-color: #171816;
                 color: #f1f1f1;
+                cursor: default;
             }
             &.unfollow {
                 background-color: #44000d;
