--- a/src/components/create/GetStarted.scss
+++ b/src/components/create/GetStarted.scss
@@ -55,10 +55,10 @@
         background-color: #cf0;
         float: right;
         position: relative;
-        transition: 0.3s all;
+        transition: 0.2s all;
 
         &:hover {
-            transform: translateY(3px);
+            transform: translateY(5px);
             &::after {
                 transform: translateY(0px);
             }
@@ -69,13 +69,14 @@
             position: absolute;
             width: 100%;
             height: 100%;
+            box-sizing: border-box;
             top: 0;
             left: 0;
-            transform: translateY(3px);
+            transform: translateY(5px);
             border-radius: 12px;
-            border-bottom: 1px solid;
+            border: 1px solid;
             border-color: #cf0;
-            transition: 0.3s all;
+            transition: 0.2s all;
         }
 
         &:disabled {
@@ -91,7 +92,7 @@
             }
 
             &::after {
-                border-color: #2c3a00;
+                display: none;
             }
         }
     }
