--- a/src/components/create/SubBanner.scss
+++ b/src/components/create/SubBanner.scss
@@ -53,9 +53,9 @@
         width: fit-content;
         z-index: 3;
         position: relative;
-        transition: 0.3s all;
+        transition: 0.2s all;
         &:hover {
-            transform: translateY(3px);
+            transform: translateY(5px);
             &::after {
                 transform: translateY(0px);
             }
@@ -66,12 +66,13 @@
             position: absolute;
             width: 100%;
             height: 100%;
+            box-sizing: border-box;
             top: 0;
             left: 0;
-            transform: translateY(3px);
-            transition: 0.3s all;
+            transform: translateY(5px);
+            transition: 0.2s all;
             border-radius: 12px;
-            border-bottom: 1px solid #00ffb3;
+            border: 1px solid #00ffb3;
         }
     }
 }
