--- a/src/components/unit/Filter.scss
+++ b/src/components/unit/Filter.scss
@@ -55,10 +55,10 @@
             font-size: 16px;
             font-style: normal;
             position: relative;
-            transition: 0.3s all;
+            transition: 0.2s all;
 
             &:hover {
-                transform: translateY(3px);
+                transform: translateY(5px);
                 &::after {
                     transform: translateY(0px);
                 }
@@ -66,13 +66,14 @@
 
             &::after {
                 content: '';
-                transform: translateY(3px);
-                transition: 0.3s all;
+                transform: translateY(5px);
+                transition: 0.2s all;
                 position: absolute;
                 width: 100%;
                 height: 100%;
+                box-sizing: border-box;
                 border-radius: 12px;
-                border-bottom: 1px solid;
+                border: 1px solid;
             }
 
             &.reset {
@@ -146,6 +147,20 @@
                 img {
                     width: 10px;
                     height: 10px;
+                }
+            }
+
+            .checkbox {
+                width: 20px;
+                height: 20px;
+                border-radius: 100%;
+                border: 1px solid #383838;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                transition: 0.5s all;
+                &.checked {
+                    background-color: #cf0;
                 }
             }
         }
