--- a/src/styles/Create.scss
+++ b/src/styles/Create.scss
@@ -182,9 +182,10 @@
                         height: 100%;
                         top: 0;
                         left: 0;
-                        transform: translateY(3px);
+                        box-sizing: border-box;
+                        transform: translateY(5px);
                         border-radius: 12px;
-                        border-bottom: 1px solid #00ffb3;
+                        border: 1px solid #00ffb3;
                     }
                 }
             }
@@ -218,10 +219,10 @@
             height: 40px;
             text-transform: capitalize;
             z-index: 2;
-            transition: 0.3s all;
+            transition: 0.2s all;
 
             &:hover {
-                transform: translateY(3px);
+                transform: translateY(5px);
                 &::after {
                     transform: translateY(0px);
                 }
@@ -234,10 +235,11 @@
                 left: 0;
                 width: 100%;
                 height: 100%;
-                border-bottom: 1px solid;
+                box-sizing: border-box;
+                border: 1px solid;
                 border-radius: 12px;
-                transform: translateY(3px);
-                transition: 0.3s all;
+                transform: translateY(5px);
+                transition: 0.2s all;
             }
 
             &.next,
@@ -268,12 +270,12 @@
                 border: 1px solid #2c3a00;
                 background-color: #000;
                 color: #565656;
+
                 &:hover {
                     transform: translateY(0px);
                 }
                 &::after {
-                    transform: translateY(3px);
-                    border-color: #2c3a00;
+                    display: none;
                 }
             }
         }
