--- a/src/components/PreparingModal.scss
+++ b/src/components/PreparingModal.scss
@@ -1,18 +1,44 @@
 // 프리페어링
 .preparing-btn {
-  width: 100%;
-  height: 38px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 4px;
-  background: #CF0;
-  transition: 0.3s;
-  color: #1a1a1a;
-  font-family: Pretendard700;
-  font-size: 14px;
-  &:hover {
-    box-shadow: 0px 0px 10px 0px #CF0;
-  }
+    width: 100%;
+    height: 38px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #cf0;
+    transition: 0.2s;
+    font-size: 14px;
+    border-radius: 12px;
+    color: #1a1a1a;
+    font-family: Orbitron600;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: 0.48px;
+    position: relative;
+    top: 0;
+
+    &:hover {
+        top: 5px;
+        &::after {
+            top: -1px;
+        }
+    }
+
+    &::after {
+        content: '';
+        position: absolute;
+        width: calc(100% - 2px);
+        height: 100%;
+        border: 1px solid #cf0;
+        top: 4px;
+        border-radius: 12px;
+        transition: 0.2s;
+    }
+
+    // &:hover {
+    //     box-shadow: 0px 0px 10px 0px #cf0;
+    // }
 } //preparing-btn--END--
 // 프리페어링
