--- a/src/components/UnFollowModal.scss
+++ b/src/components/UnFollowModal.scss
@@ -30,23 +30,24 @@
         letter-spacing: 0.48px;
         position: relative;
         border: none;
-        transition: 0.3s all;
+        transition: 0.2s all;
 
         &::after {
             content: '';
             position: absolute;
             width: 100%;
             height: 100%;
+            box-sizing: border-box;
             left: 0;
             top: 0;
-            transform: translateY(3px);
+            transform: translateY(5px);
             border-radius: 12px;
-            border-bottom: 1px solid;
-            transition: 0.3s all;
+            border: 1px solid;
+            transition: 0.2s all;
         }
 
         &:hover {
-            transform: translateY(3px);
+            transform: translateY(5px);
 
             &::after {
                 transform: translateY(0px);
