--- a/src/components/mypage/albums/AlbumsDetail.scss
+++ b/src/components/mypage/albums/AlbumsDetail.scss
@@ -25,6 +25,7 @@
           .my-album-details__box__header__left__img-box__img {
             border-radius: 20px;
             width: 100%;
+            height: 100%;
             object-fit: cover;
           }
           .my-album-details__box__header__left__img-box__button {
