--- a/src/components/create/LyricLab.scss
+++ b/src/components/create/LyricLab.scss
@@ -19,6 +19,12 @@
     display: flex;
     justify-content: flex-end;
     gap: 32px;
+    align-items: center;
+    .generated-lyrics__confirm-buttons--text {
+      &.disabled {
+        color: red;
+      }
+    }
   }
 
   .generated-lyrics__confirm-buttons--button {
@@ -62,6 +68,13 @@
       background-color: #cf0;
       &::after {
         border-color: #cf0;
+      }
+    }
+    &.disabled {
+      background-color: #ccc;
+      cursor: not-allowed;
+      &::after {
+        border-color: #ccc;
       }
     }
   }
