--- a/src/components/unit/ContentWrap.scss
+++ b/src/components/unit/ContentWrap.scss
@@ -39,4 +39,10 @@
         padding-left: 32px;
         border-bottom: 1px solid #aaa;
     }
+
+    .unit-component-content-wrap__sub-title {
+        color: #f1f1f1;
+        font-family: Inter400;
+        font-size: 16px;
+    }
 }
