--- a/src/styles/NftItemDetail.scss
+++ b/src/styles/NftItemDetail.scss
@@ -445,9 +445,25 @@
                 gap: 12px;
                 margin-top: 20px;
                 dl {
-                    &.Sell{
+                    &.Sold{
                         dd{
-                            color: var(--secondary-base, #00FFB3);
+                            color: #A9D400;
+                            font-family: Inter400;
+                            font-size: 14px;
+                            font-style: normal;
+                        }
+                    }
+                    &.Listed{
+                        dd{
+                            color: #5A9BF6;
+                            font-family: Inter400;
+                            font-size: 14px;
+                            font-style: normal;
+                        }
+                    }
+                    &.Unlisted{
+                        dd{
+                            color: #DF1919;
                             font-family: Inter400;
                             font-size: 14px;
                             font-style: normal;
