경세 fix : 앨범 에딧 수정

--- a/src/components/table/TableCompositions.scss
+++ b/src/components/table/TableCompositions.scss
@@ -52,6 +52,10 @@
   padding: 8px;
   text-align: center;
 
+  &.index {
+    width: 40px;
+  }
+
   .text {
     text-align: center;
     overflow: hidden;
