--- a/src/components/unit/AlbumsTable.scss
+++ b/src/components/unit/AlbumsTable.scss
@@ -166,6 +166,27 @@
             object-fit: cover;
           }
         }
+
+        .albums-table__artist--edit-table {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 8px;
+          color: #aaa;
+          text-align: center;
+          font-family: Inter400;
+          font-size: 12px;
+
+          img {
+            margin: 0;
+            width: 12px;
+            height: 12px;
+            overflow: hidden;
+            border-radius: 100%;
+            object-fit: cover;
+          }
+        }
+
         .albums-table__song-btn {
           width: 30px;
           height: 30px;
