--- a/src/styles/MintNftSellDetail.scss
+++ b/src/styles/MintNftSellDetail.scss
@@ -19,7 +19,43 @@
     }
   } //album-detail__title--END--
 
+  .mint-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    float: right;
+    width: 100%;
+    height: 40px;
+    background: #00FFB3;
+    position: relative;
+    top: 0;
+    transition: 0.2s;
+    color:#1A1A1A;
+    font-family: Orbitron600;
+    font-size: 16px;
+    font-style: normal;
+    line-height: normal;
+    border-radius: 12px;
+    &::before{
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 4px;
+        width: calc(100% - 2px);
+        transition: 0.2s;
+        border-radius: 12px;
+        height: 38px;
+        border: 1px solid #00FFB3;
+    }
+    &:hover{
+        top: 4px;
+        &::before{
+            top: 0;
+        }
+    }
 
+  }//mint-btn--END--
+  
   .sell-btn{
     display: flex;
     align-items: center;
@@ -410,42 +446,7 @@
         display: flex;
         gap: 16px;
       }//selected-collection-bottom__right__two-dl--eND--
-      .selected-collection-bottom__right__mint-btn{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        float: right;
-        width: 100%;
-        height: 40px;
-        background: #00FFB3;
-        position: relative;
-        top: 0;
-        transition: 0.2s;
-        color:#1A1A1A;
-        font-family: Orbitron600;
-        font-size: 16px;
-        font-style: normal;
-        line-height: normal;
-        border-radius: 12px;
-        &::before{
-            content: '';
-            position: absolute;
-            left: 0;
-            top: 4px;
-            width: calc(100% - 2px);
-            transition: 0.2s;
-            border-radius: 12px;
-            height: 38px;
-            border: 1px solid #00FFB3;
-        }
-        &:hover{
-            top: 4px;
-            &::before{
-                top: 0;
-            }
-        }
 
-      }//selected-collection-bottom__right__mint-btn--END--
     }//selected-collection-bottom__right--END--
   }//selected-collection-bottom--END--
 
