--- a/src/components/mypage/albums/AlbumsDetail.scss
+++ b/src/components/mypage/albums/AlbumsDetail.scss
@@ -17,8 +17,8 @@
       .my-album-details__box__header__left {
         .my-album-details__box__header__left__img-box {
           position: relative;
-          width: 320px;
-          height: 320px;
+          width: 180px;
+          height: 180px;
           border-radius: 24px;
           background: var(--Color-03, #222);
           padding: 8px;
@@ -59,8 +59,12 @@
             gap: 16px;
             color: var(--Text-music-title, #f1f1f1);
             font-family: Orbitron500;
-            font-size: 20px;
+            font-size: 28px;
             font-style: normal;
+            span {
+              font: inherit;
+            }
+
             .my-album-details__box__header__right__box__title__edit-btn {
               height: 34px;
               border-radius: 12px;
@@ -79,14 +83,14 @@
           .my-album-details__box__header__right__box__list {
             width: 100%;
             display: flex;
-            flex-direction: column;
+            // flex-direction: column;
             gap: 12px;
             .my-album-details__box__header__right__box__list__item {
-              width: 100%;
+              width: 50%;
               display: flex;
               align-items: center;
               border-radius: 6px;
-              border-top: 1px solid #222;
+              border: 1px solid #222;
               overflow: hidden;
               .my-album-details__box__header__right__box__list__item__title {
                 background: #222;
@@ -133,7 +137,7 @@
           } //my-album-details__box__header__right__box__list--END--
           .my-album-details__box__header__right__play-btn {
             margin-top: auto;
-            width: 130px;
+            width: 120px;
             height: 52px;
             background: #383838;
             position: relative;
